Fix overscroll on mobiles

--- a/database/apex/f800/files/app.css
+++ b/database/apex/f800/files/app.css
@@ -2,15 +2,15 @@
 #BANNER {
     background      : #615d51;
     color           : #fff;
-    padding         : 1.5rem 2.5rem;
+    padding         : 2.5rem 2.5rem 1.5rem;
     min-height      : 16rem;
-    margin          : -3rem -1rem 1rem;
+    margin          : -4rem -1rem 1rem;
 }
 #BANNER h1 {
     font-family     : var(--ut-hero-region-title-font-family), sans-serif;
     font-weight     : 300;
     font-size       : 2.4rem;
-    margin          : 3rem 0 0.5rem !important;
+    margin          : 4rem 0 0.5rem !important;
 }
 #BANNER ::selection {
   color             : #fff;
